# AI-CAREER-COACH

./: .env  README.md  frontend.py  main.py  pyproject.toml  questions.md  requirements.txt
backend/: agent.py  main.py
backend/tools/: career_advice.py  interview.py  outreach.py  resume.py
